Feature/dtc addition (#13)
* adding new dtc pages

* added the 2 new dtc pages

* updated results cards for DTC. fixed up some css on one of the DTC pages

Co-authored-by: Adam Andrews <andr0272@algonquinlive.com>

* updated results for DTC

* renamed dtc-a and dtc-b to something more meaningful

* updated changelog

* updated cypress tests

* fixed html on result card

* updated text for DTC

* fixed accessibility issues on DTC pages

* Fixed typo

Co-authored-by: Adam Andrews <andr0272@algonquinlive.com>
Co-authored-by: Eric Dube <ericdube88@gmail.com>

--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -114,6 +114,10 @@ form {
     color: $color-grey-dark;
   }
 
+  .form-bullet {
+    padding: 0;
+  }
+
   .validation-message {
     font-weight: 400;
     color: $color-red;
