--- a/views/benefits/dtc_oas-fr.njk
+++ b/views/benefits/dtc_oas-fr.njk
@@ -5,29 +5,46 @@
 {% set sectionId = 'dtc_oas' %}
 
 {% block header %}
-  {{__("dtc_oas.header")}}
+  {{__("dtc.title")}}
 {% endblock %}
 
 {% block featured_list_items %}
   {{ benefitLi("<ul>
-    <li class='mb-2'><strong>Paiement unique de 300 $, non imposable</strong> si vous recevez la <strong>pension de la Sécurité de vieillesse.</strong></li>
-    <li><strong>OU paiement unique de 100 $, non imposable</strong> si vous recevez le crédit d'impôt pour personnes handicapées et le <strong>supplément de revenu garanti.</strong> </li>
+    <li class='mb-2'><strong>Paiement unique de 300 $, non imposable si vous recevez la pension de la Sécurité de vieillesse (SV)</strong></li>
+    <li><strong>OU</strong></li>
+    <li><strong>paiement unique de 100 $, non imposable si vous avez reçu le paiement unique pour les aînés de 500 $ pour la pension de la SV et le Supplément de revenu garanti (SRG).</strong> </li>
   </ul>") }}
-  {{ benefitLi("<strong>Les paiements automatiques débutent le 10 août 2020</strong>") }}
+  {{ benefitLi("<strong>Nous anticipons émettre les paiements à compter de cet automne. Vous n’avez pas à faire quoi que ce soit pour le recevoir.</strong>") }}
 {% endblock %}
 
 {% block body %}
   <strong>Bon à savoir :</strong>
   <ul>
-    <li>Ce paiement peut aider si vous détenez un certificat valide pour le crédit d'impôt pour personnes handicapées.</li>
-    <li>Les paiements seront déposés automatiquement dès que possible. Vous n’avez pas à faire quoi que ce soit pour le recevoir. /li>
+    <li>Vous êtes admissible pour ce paiement si vous bénéficiaires en date du 1er juillet 2020 de l’une ou l’autre des mesures suivantes :
+      <ul>
+        <li>prestation d’invalidité du Régime de pensions du Canada;</li>
+        <li>prestation pour invalidité du Régime de rentes du Québec;</li>
+        <li>l’une des mesures de soutien pour invalidité offertes par Anciens Combattants Canada (ACC) :
+          <ul>
+            <li>pension d’invalidité;</li>
+            <li>indemnité d’invalidité;</li>
+            <li>indemnité pour douleur et souffrance;</li>
+            <li>indemnité pour blessure grave;</li>
+            <li>Programme de services de réadaptation et d’assistance professionnelle;</li>
+            <li>prestations de remplacement du revenu;</li>
+            <li>Allocation de soutien du revenu des Forces canadiennes.</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li>Nous anticipons émettre les paiements à compter de cet automne. Vous n’avez pas à faire quoi que ce soit pour le recevoir.</li>
   </ul>
 {% endblock %}
 
 {% block info_link %}
   {{ infoLink(
     "dtc_oas",
-    "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/segments/deductions-credits-impot-personnes-handicapees/credit-impot-personnes-handicapees.html",
+    "https://www.canada.ca/fr/services/prestations/covid-19-prestations-urgence/paiement-unique-personnes-handicapees.html",
     "En savoir plus à propos du crédit d'impôt pour personnes handicapées"
   )}}
 {% endblock %}
