made revisions to DTC individual result card (#16)
* made revisions to DTC individual result card

* updated changelog

* fixed a typo

* fixing another typo

* fixing one last little typo

--- a/views/benefits/dtc_individual-en.njk
+++ b/views/benefits/dtc_individual-en.njk
@@ -15,7 +15,24 @@
 {% block body %}
   <strong>Good to know:</strong>
   <ul>
-    <li>You are eligible for this payment if you hold a valid certificate for the Disability Tax Credit or are receiving pension disability benefits or disability benefits through Veteran Affairs Canada.</li>
+    <li>You are eligible for this payment if you hold a valid certificate for the Disability Tax Credit; or</li>
+    <li>You are a beneficiary of one of the following as of July 1, 2020:
+      <ul>
+        <li>Canada Pension Plan Disability</li>
+        <li>Quebec Pension Plan Disability, or</li>
+        <li>1 of the disability supports provided by Veterans Affairs Canada:
+          <ul>
+            <li>Disability Pension</li>
+            <li>Disability Award</li>
+            <li>Pain and Suffering Compensation</li>
+            <li>Critical Injury Benefit</li>
+            <li>Rehabilitation Services and Vocational Assistance Program</li>
+            <li>Income Replacement Benefit, and/or</li>
+            <li>Canadian Forces Income Support</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
     <li>We expect to issue the payments beginning this fall. You don’t need to do anything to receive it.</li>
   </ul>
 {% endblock %}
