--- a/views/benefits/dtc_individual-fr.njk
+++ b/views/benefits/dtc_individual-fr.njk
@@ -15,7 +15,24 @@
 {% block body %}
   <strong>Bon à savoir :</strong>
   <ul>
-    <li>Vous êtes admissible si vous détenez un certificat valide pour le crédit d'impôt pour personnes handicapées ou si vous recevez des prestations d’invalidités ou des prestations d’invalidités offertes par Anciens Combattants Canada.</li>
+    <li>Vous êtes admissible si vous détenez un certificat valide pour le crédit d'impôt pour personnes handicapées, ou</li>
+    <li>vous êtes bénéficiaire en date du 1er juillet 2020, de l’une ou l’autre des mesures suivantes :
+      <ul>
+        <li>Prestation d’invalidité du Régime de pensions du Canada</li>
+        <li>Prestation pour invalidité du Régime de rentes du Québec, ou</li>
+        <li>L’une des mesures de soutien pour invalidité offertes par Anciens Combattants Canada :
+          <ul>
+            <li>pension d’invalidité;</li>
+            <li>indemnité d’invalidité;</li>
+            <li>indemnité pour douleur et souffrance;</li>
+            <li>indemnité pour blessure grave;</li>
+            <li>Programme de services de réadaptation et d’assistance professionnelle;</li>
+            <li>prestations de remplacement du revenu;</li>
+            <li>Allocation de soutien du revenu des Forces canadiennes.</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
     <li>Nous anticipons émettre les paiements à compter de cet automne. Vous n’avez pas à faire quoi que ce soit pour le recevoir.</li>
   </ul>
 {% endblock %}
