Replaced number with spelled out

--- a/views/benefits/dtc_oas-en.njk
+++ b/views/benefits/dtc_oas-en.njk
@@ -24,7 +24,7 @@
       <ul>
         <li>Canada Pension Plan Disability</li>
         <li>Quebec Pension Plan Disability, or</li>
-        <li>1 of the disability supports provided by Veterans Affairs Canada Disability Pension:
+        <li>One of the disability supports provided by Veterans Affairs Canada Disability Pension:
           <ul>
             <li>Disability Pension</li>
             <li>Disability Award</li>
