Replaced Number with spelled out

--- a/views/benefits/dtc_individual-en.njk
+++ b/views/benefits/dtc_individual-en.njk
@@ -20,7 +20,7 @@
       <ul>
         <li>Canada Pension Plan Disability</li>
         <li>Quebec Pension Plan Disability, or</li>
-        <li>1 of the disability supports provided by Veterans Affairs Canada:
+        <li>One of the disability supports provided by Veterans Affairs Canada:
           <ul>
             <li>Disability Pension</li>
             <li>Disability Award</li>
