Added content changes (#38)
* Added content changes

* Fixed typo

* Added missing bracket

* Updated Changelog

--- a/views/benefits/cerb-en.njk
+++ b/views/benefits/cerb-en.njk
@@ -8,8 +8,10 @@
 
 {% block featured_list_items %}
   {{ benefitLi("<strong>$500 per week</strong>") }}
-  {{ benefitLi("<strong>Up to 28 weeks</strong> if you keep  meeting the eligibility criteria") }}
+  {{ benefitLi("<strong>Up to 28 weeks if you keep  meeting the eligibility criteria</strong> ") }}
   {{ benefitLi("<strong>First payment within 10 days of applying</strong>") }}
+  {{ benefitLi("<strong>The Benefit is available from March 15, 2020 to October 3, 2020</strong>") }}
+  {{ benefitLi("<strong>You can <b>apply no later than December 2, 2020</b> for payments <b>retroactive</b> to within that period</strong>") }}
 {% endblock %}
 
 {% block body %}
@@ -18,6 +20,11 @@
     <li>You’ll be asked some questions to direct you to apply through either the Canada Revenue Agency (CRA) or Service Canada.</li>
     <li>The application will ask you to declare that you meet the eligibility criteria, so read the details carefully.</li>
     <li>You’ll need to pay income tax on these payments in the future.</li>
+  </ul>
+
+  <strong>Good to know:</strong>
+  <ul>
+    <li>As an alternative to CERB, the Government proposed new temporary recovery benefits that will better support Canadians not eligible for Employment Insurance. Visit the <a href="https://www.canada.ca/en/employment-social-development/news/2020/08/government-of-canada-announces-plan-to-help-support-canadians-through-the-next-phase-of-the-recovery.html">Transitioning to new benefits page for more information</a>.</li>
   </ul>
 {% endblock %}
 
