--- a/views/benefits/cerb-en.njk
+++ b/views/benefits/cerb-en.njk
@@ -11,20 +11,21 @@
   {{ benefitLi("<strong>Up to 28 weeks if you keep  meeting the eligibility criteria</strong> ") }}
   {{ benefitLi("<strong>First payment within 10 days of applying</strong>") }}
   {{ benefitLi("<strong>The Benefit is available from March 15, 2020 to October 3, 2020</strong>") }}
-  {{ benefitLi("<strong>You can <b>apply no later than December 2, 2020</b> for payments <b>retroactive</b> to within that period</strong>") }}
+  {{ benefitLi("<strong>You can apply retroactively to the Canada Revenue Agency (CRA) for the CERB until December 2, 2020 for benefits between March 15th and October 3rd.</strong>") }}
 {% endblock %}
 
 {% block body %}
   <strong>Next steps:</strong>
   <ul>
-    <li>You’ll be asked some questions to direct you to apply through either the Canada Revenue Agency (CRA) or Service Canada.</li>
     <li>The application will ask you to declare that you meet the eligibility criteria, so read the details carefully.</li>
     <li>You’ll need to pay income tax on these payments in the future.</li>
   </ul>
 
   <strong>Good to know:</strong>
   <ul>
-    <li>As an alternative to CERB, the Government proposed new temporary recovery benefits that will better support Canadians not eligible for Employment Insurance. Visit the <a href="https://www.canada.ca/en/employment-social-development/news/2020/08/government-of-canada-announces-plan-to-help-support-canadians-through-the-next-phase-of-the-recovery.html">Transitioning to new benefits page for more information</a>.</li>
+    <li>On August 20th, 2020 the Government of Canada announced changes to the Employment Insurance (EI) program and <a href="https://www.canada.ca/en/employment-social-development/news/2020/08/government-of-canada-announces-plan-to-help-support-canadians-through-the-next-phase-of-the-recovery.html">new recovery benefits</a> that will better support Canadians.</li>
+    <li>As of September 27, 2020, if you are eligible for EI, further information can be found on the <a href="https://www.canada.ca/en/services/benefits/ei.html">Employment Insurance benefits and leave</a> web page.</li>
+    <li><a href="https://www.parl.ca/LegisInfo/BillDetails.aspx?Language=E&billId=10867434">Legislation for the new recovery benefits</a> is currently before Parliament. If passed, the benefits would apply retroactively to September 27, 2020.</li>
   </ul>
 {% endblock %}
 
