--- a/views/benefits/cerb-fr.njk
+++ b/views/benefits/cerb-fr.njk
@@ -11,20 +11,21 @@
   {{ benefitLi("<strong>Jusqu’à 28 semaines tant que vous répondez aux critères d’admissibilité</strong>") }}
   {{ benefitLi("<strong>À recevoir au plus tard 10 jours après la demande</strong>") }}
   {{ benefitLi("<strong>La prestation est disponible du 15 mars 2020 au 3 octobre 2020</strong>") }}
-  {{ benefitLi("<strong>Vous pouvez faire unde demande <b>auplus tard le 2 décembre 2020</b> pour le paiements </b>rétroactifs</b> à cette période</strong>") }}
+  {{ benefitLi("<strong>Vous pouvez faire une demande rétroactive pour la PCU à l’Agence du revenu du Canada (ARC) jusqu’au 2 décembre 2020 pour des prestations entre le 15 mars et le 3 octobre</strong>") }}
 {% endblock %}
 
 {% block body %}
   <strong>Prochaines étapes :</strong>
   <ul>
-    <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
     <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
     <li>Ces montants sont imposables.</li>
   </ul>
 
   <strong>Bon à savoir :</strong>
   <ul>
-    <li>Comme alternative à la PCU, le gouvernement propose de nouvelles prestations de la relance économique afin de mieux soutenir les Canadiens. Consultez la page <a href="https://www.canada.ca/fr/emploi-developpement-social/nouvelles/2020/08/government-of-canada-announces-plan-to-help-support-canadians-through-the-next-phase-of-the-recovery.html">Transition vers de nouvelles prestations pour obtenir plus d’informations</a>.</li>
+    <li>Le 20 août 2020, le gouvernement du Canada a annoncé la mise en œuvre de changements au régime d'assurance-emploi et de <a href="https://www.canada.ca/fr/emploi-developpement-social/nouvelles/2020/08/government-of-canada-announces-plan-to-help-support-canadians-through-the-next-phase-of-the-recovery.html">nouvelles prestations de la relance économique</a> afin de mieux appuyer les Canadiens.</li>
+    <li>À compter du 27 septembre 2020, si vous êtes admissible à l'assurance-emploi, vous trouverez de plus amples informations sur la page web des <a href="https://www.canada.ca/fr/services/prestations/ae.html">Prestations d’assurance-emploi et congés</a>.</li>
+    <li><a href="https://www.parl.ca/LegisInfo/BillDetails.aspx?billId=10867434&Language=F">Le projet de loi sur les nouvelles prestations de la relance économique</a> est actuellement à l'étude au Parlement. Si elles sont adoptées, les prestations s'appliqueront rétroactivement au 27 septembre 2020.</li>
   </ul>
 {% endblock %}
 
