--- a/views/benefits/transition_to_ei-en.njk
+++ b/views/benefits/transition_to_ei-en.njk
@@ -8,8 +8,8 @@
 
 {% block featured_list_items %}
   {{ benefitLi("<strong>For people who have stopped working or who have lost their job through no fault of their own</strong>") }}
-  {{ benefitLi("<strong>There are some temporary changes to the EI program to help you access EI benefits</strong>") }}
-  {{ benefitLi("<strong>The minimum benefit rate is $500 per week in most cases</strong>") }}
+  {{ benefitLi("<strong>There are some temporary changes to the EI program in place between September 27 2020 and September 25 2021 to help you access EI benefits</strong>") }}
+  {{ benefitLi("<strong>The minimum benefit rate is $500 per week (taxable) in most cases for a minimum of 26 weeks.</strong>") }}
 {% endblock %}
 
 {% block body %}
